--- a/gb/15/7/8/n4475352.md
+++ b/gb/15/7/8/n4475352.md
@@ -1,8 +1,8 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dssmoy388/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dssmoy388/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dssmoy388/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dssmoy388/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dssmoy388/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dssmoy388/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dssmoy388/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dssmoy388/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>孩子为什么会这样？(4)</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/Fotolia_45613345_Subscription_L-320x200.jpg" />
+
 <h6></h6>
 <hr>
 <h2>作者： 李显文</h2>
@@ -30,54 +30,53 @@
 <p>所以，在处理孩子做错事的过程中，也不要忘了多给予孩子肯定和鼓励。特别是，当孩子诚实说出自己过错时，比指出他哪里做错更重要的是，应该要先赞赏肯定孩子“说实话”：我很高兴你把事实告诉我，虽然我并不很认同你的一些想法和行为，但是你愿意说实话，我觉得你真的很棒！</p>
 <p>当孩子不担心说实话会被责骂、做错事会被惩罚，自然在碰到问题时，就会主动寻求父母的协助并且乐于学习如何解决自己的问题了。</p>
 <p>─ ─摘自:《孩子为什么会这样？高效能父母学专家教你一招解决80%的教养问题》野人出版提供@</p>
-<p>责任编辑：黎薇<br />&#8211; See more at: https://github.com/dssmoy388/djy/blob/master/gb/15/6/18/n4460210.md#1#sthash.dmCEURO6.dpuf</p>
+<p>责任编辑：黎薇<br />&#8211; See more at: https://github.com/hoxgwd311/djy/blob/master/gb/15/6/18/n4460210.md#1#sthash.dmCEURO6.dpuf</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/10/6/n4265123.md#1">启动孩子成功方程式的三大秘密(上)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/10/8/n4266958.md#1">教养 从改变说话口气开始(四)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/10/15/n4272640.md#1">教养 从改变说话口气开始(五)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/10/21/n4276750.md#1">启动孩子成功方程式的三大秘密(中)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/10/27/n4282076.md#1">启动孩子成功方程式的三大秘密(下)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/11/4/n4287534.md#1">要有威信 不一定得凶孩子(上)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/11/15/n4296286.md#1">要有威信 不一定得凶孩子(中)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/11/20/n4300276.md#1">负面新闻充斥 爸妈帮帮忙</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/11/20/n4300335.md#1">要有威信 不一定得凶孩子(下)</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/12/10/n4315043.md#1">传统阅读让孩子更聪明</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/6/n4265123.md#1">启动孩子成功方程式的三大秘密(上)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/8/n4266958.md#1">教养 从改变说话口气开始(四)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/15/n4272640.md#1">教养 从改变说话口气开始(五)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/21/n4276750.md#1">启动孩子成功方程式的三大秘密(中)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/27/n4282076.md#1">启动孩子成功方程式的三大秘密(下)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/4/n4287534.md#1">要有威信 不一定得凶孩子(上)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/15/n4296286.md#1">要有威信 不一定得凶孩子(中)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/20/n4300276.md#1">负面新闻充斥 爸妈帮帮忙</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/20/n4300335.md#1">要有威信 不一定得凶孩子(下)</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/12/10/n4315043.md#1">传统阅读让孩子更聪明</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10022923.md#1" target="_blank">宋永毅：江青和张玉凤的秘密战争</a></li><li><a href="https://github.com/dssmoy388/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/24/n12643687.md#1">【新闻看点】习近平反垄断 马云成第一标靶？</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/24/n12643382.md#1">【财商天下】北上广深停电 背后算盘或惊人</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/24/n12641590.md#1">【横河直播】新毒株来势汹汹 疫苗打还是不打</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12640816.md#1">拜登抱怨国防部不合作 五角大楼半夜发声明</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12641103.md#1">中共机构喊“上山下乡是壮举”被网民骂翻删帖</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/22/n12638646.md#1">黄晓明暴瘦10公斤 一日菜单吓坏网友</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12640869.md#1">六年情断 周迅与高圣远宣布离婚</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/24/n12642145.md#1">杜汶泽谈亲共艺人 林昶佐直播吸30万人</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/25/n12643860.md#1">62岁冯小刚近照很显憔悴 头发斑秃面色发白</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/24/n12641430.md#1">自曝不愿上综艺节目原因 高圆圆获网友称赞</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639185.md#1">小腹凸、腰酸可能是骨盆前倾 2动作“瘦”下来</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/25/n12644367.md#1">被陌生人喂食 山西流浪狗喜极而泣</a></li>
-<li><a href="https://github.com/dssmoy388/djy/blob/master/gb/20/12/23/n12639785.md#1">该用电动牙刷吗？手动跟电动牙刷大比拼！</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dssmoy388/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dssmoy388/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/8/n4475352.htm">孩子为什么会这样？(4)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/8/n4475352.htm">孩子为什么会这样？(4)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dssmoy388/djy/blob/master/gb/15/7/8/n4475352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dssmoy388/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dssmoy388/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dssmoy388/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dssmoy388/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dssmoy388/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/15/7/8/n4475352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
